--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles/styles.css" />
     <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Lato&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Sedgwick+Ave&display=swap" rel="stylesheet">
     <script src="script.js" ></script>
-    <title>Document</title>
+    <link rel='icon' type='image/x-icon' href='favicon.ico' />
+    <title>Henry's Blog</title>
   </head>
   <body>
       </div>
@@ -38,10 +39,10 @@
           voluptatem saepe deserunt exercitationem a ad adipisci sint ea?
         </p>
         <div class="btns">
-            <button class="likeBtn">Like</button>
+            <button onclick="likeCounter()" id="likeButton" class="likeBtn">Like</button>
             <button class="dislikeBtn">Dislike</button>
         </div>
-        <p class="score">0 | 0</p>
+        <p id="score" class="score"><span id="likes">0</span> | <span id="dislikes">0</span></p>
       </div>
     </section>
 
@@ -103,18 +104,7 @@
     </div>
 </div>
 </div>
-    <form id="contactForm" class="hide" action="mailto:someone@example.com" method="post" enctype="text/plain">
-        <h2>Reach Out</h2>
-        <p class="contact"> Name:</p><br>
-        <input class="inputBox" type="text" name="name"><br>
-        <p class="contact"> Email</p><br>
-        <input class="inputBox" type="text" name="mail"><br>
-        <p class="contact"> Comments:</p><br>
-        <textarea class="inputBox" name="comment" cols="50" rows="50"></textarea><br><br>
-        <input class="likeBtn" type="submit" value="Send">
-        <input class="likeBtn" type="reset" value="Reset">
-    </form>
-
+   
       <footer id="foot" class="clearfix hide">
         <p class='copyright'>&copy Copyright 2020 </p>
         <p class="madeBy">Made by Henry Cook 👨‍💻</p>
