--- a/posts.html
+++ b/posts.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles/styles.css" />
     <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Lato&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Sedgwick+Ave&display=swap" rel="stylesheet">
     <script src="script.js" ></script>
@@ -17,7 +17,7 @@
         <a href="posts.html">Contact</a>
       </nav>
     </header>
-    
+    <section class="contactForm">
     <form action="mailto:someone@example.com" method="post" enctype="text/plain">
       <h2>Reach Out</h2>
       <p class="contact"> Name:</p><br>
@@ -29,7 +29,7 @@
       <input class="likeBtn" type="submit" value="Send">
       <input class="likeBtn" type="reset" value="Reset">
       </form>
-
+    </section>
       <footer id="foot" class="clearfix">
         <p class='copyright'>&copy Copyright 2020 </p>
         <p class="madeBy">Made by Henry Cook 👨‍💻</p>
